commit files of game

--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,1 +1,34 @@
-HOME
+  <body>
+    <section class="main">
+      <div class="background">
+        <div class="container">
+          <section class="titleOfTheGame">
+            <img class="elipse1" src="../images/elipse.png" />
+            <img class="elipse2" src="../images/elipse.png" />
+            <img class="elipse3" src="../images/elipse.png" />
+            <img class="elipse4" src="../images/elipse.png" />
+            <img class="pictureOfMario" src="../images/mariocharo.png" />
+          </section>
+          <div class="menu">
+            <ul>
+              <li>
+                <p class="play">JOUER</p>
+                <img class="star1" src="../images/ministar.png" />
+              </li>
+              <li>
+                <p class="orders">COMMANDES</p>
+                <img class="star2" src="../images/ministar.png" />
+              </li>
+              <li>
+                <p class="exit">QUITTER</p>
+                <img class="star3" src="../images/ministar.png" />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
+
+
