add js file game2

--- a/src/screens/game2.html
+++ b/src/screens/game2.html
@@ -3,6 +3,6 @@
     Vite saute sur Daisy en lui cliquant dessus pour la faire disparaître !
   </div>
   <div id="daisyhere">
-    <img id="sleepingdaisy" src="../images/sleepingdaisy.png" />
+    <img id="sleepingdaisy" class="sleep" src="../images/sleepingdaisy.png" />
   </div>
 </body>
