video: ok, images: ok, pages:ok

--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,8 +1,1 @@
-<body class="game">
-  <div class="daisyText">
-    <p>
-      Qu'est ce- ? Daisy ? Pourquoi je suis dans son lit.... OH LA BOULETTE !
-      Mamamia... Peach va me -
-    </p>
-  </div>
-</body>
+Game
