video: ok, images: ok, pages:ok retry avec modif sur script, game1, game2

--- a/src/screens/tutocommande.html
+++ b/src/screens/tutocommande.html
@@ -1,5 +1,4 @@
-<body>
-    <section class="content">
+    <section class="content backgroundTutoC">
         <section class="text">
             <h1 class="but">BUT DU JEU</h1>
             <br />
@@ -17,4 +16,3 @@
             <img src="/images/tuto-images.png" class="imgTuto">
         </section>
     </section>
-</body>
