--- a/src/screens/game0.html
+++ b/src/screens/game0.html
@@ -1,5 +1,5 @@
-<body class="game0">
+<div class="game0">
   <video autoplay preload>
     <source src="/videos/super-mario-final-wedding.mp4" type="video/mp4" />
   </video>
-</body>
+</div>
