files names changed (game1<-->game2)

--- a/src/screens/game1.html
+++ b/src/screens/game1.html
@@ -1,7 +1,8 @@
-<div class="background1">
-  <div class="daisyText2">
-    <p>
-      Peach depuis le RC : “MARIO JE SAIS QUE TU ES LA SI JE T’ATTRAPES- !!! “
-    </p>
+<div class="background2">
+  <div class="disapearText">
+    Vite saute sur Daisy en lui cliquant dessus pour la faire disparaître !
+  </div>
+  <div class="daisyhere">
+    <img class="sleepingdaisy" src="../images/sleepingdaisy.png" />
   </div>
 </div>
