--- a/src/screens/game2.html
+++ b/src/screens/game2.html
@@ -1,8 +1,7 @@
-<div class="background2">
-  <div class="disapearText">
-    Vite saute sur Daisy en lui cliquant dessus pour la faire disparaître !
-  </div>
-  <div class="daisyhere">
-    <img class="sleepingdaisy" src="../images/sleepingdaisy.png" />
+<div class="background1">
+  <div class="daisyText2">
+    <p>
+      Peach depuis le RC : “MARIO JE SAIS QUE TU ES LA SI JE T’ATTRAPES- !!! “
+    </p>
   </div>
 </div>
