daisy click fixed

--- a/src/screens/game1.html
+++ b/src/screens/game1.html
@@ -2,7 +2,7 @@
   <div class="disapearText">
     Vite saute sur Daisy en lui cliquant dessus pour la faire disparaître !
   </div>
-  <div class="daisyhere">
-    <img class="sleepingdaisy" src="../images/sleepingdaisy.png" />
+  <div id="daisyhere">
+    <img id="sleepingdaisy" src="/images/sleepingdaisy.png" />
   </div>
 </div>
