script click COMMANDES from startmenu: ok, tutocommande: changed a bit

--- a/src/screens/game0.html
+++ b/src/screens/game0.html
@@ -1,5 +1,5 @@
 <div class="game0">
-  <video autoplay preload>
+  <video autoplay preload controls>
     <source src="/videos/super-mario-final-wedding.mp4" type="video/mp4" />
   </video>
 </div>
