--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,5 +1,5 @@
     <section class="main">
-        <div class="background">
+        <div class="backgroundH">
             <div class="container">
                 <section class="titleOfTheGame">
                     <img class="elipse1" src="/images/elipse.png" />
@@ -12,15 +12,15 @@
                     <ul>
                         <li>
                             <p class="play">JOUER</p>
-                            <img class="star1" src="/images/ministar.png" />
+                            <img class="star1" src="/images/ministar.gif" />
                         </li>
                         <li>
                             <p class="orders">COMMANDES</p>
-                            <img class="star2" src="/images/ministar.png" />
+                            <img class="star2" src="/images/ministar.gif" />
                         </li>
                         <li>
                             <p class="exit">QUITTER</p>
-                            <img class="star3" src="/images/ministar.png" />
+                            <img class="star3" src="/images/ministar2.gif" />
                         </li>
                     </ul>
                 </div>
