--- a/src/screens/tutocommande.html
+++ b/src/screens/tutocommande.html
@@ -1,18 +1,17 @@
-    <section class="content backgroundTutoC">
+    <section class="contentTuto">
         <section class="text">
             <h1 class="but">BUT DU JEU</h1>
             <br />
             <br />
-            <article class="textButText">
-                Clique sur les étoiles pour te cacher, sinon Princesse Peach te trouvera.<br />
-                Tu dois survivre une minute et récupérer la totalité des champi’<br />
-                de la maison pour effacer les preuves de ta venue,<br />
-                <br />
-                N'oublie pas ta limite de temps ! Bonne chance à toi,
-            </article>
-        </section>
+            <article class="explication">
+                mamma mia ! peach voit rouge !
+                ramasse le plus de champignons possibles dans un temps imparti
+                sans te faire attraper par peach
 
-        <section class="tutoImg">
-            <img src="/images/tuto-images.png" class="imgTuto">
+            </article>
+
+            <section class="tutoImg">
+                <img src="/images/tuto-images.png" class="imgTuto">
+            </section>
         </section>
     </section>
