start menu changed, QUITTER removed

--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,11 +1,11 @@
     <section class="main">
-        <div class="backgroundH">
+        <div class="backgroundOpacity">
             <div class="container">
                 <section class="titleOfTheGame">
-                    <img class="elipse1" src="/images/elipse.png" />
-                    <img class="elipse2" src="/images/elipse.png" />
-                    <img class="elipse3" src="/images/elipse.png" />
-                    <img class="elipse4" src="/images/elipse.png" />
+                    <img class="elipses elipse1" src="/images/elipse.png" />
+                    <img class="elipses elipse2" src="/images/elipse.png" />
+                    <img class="elipses elipse3" src="/images/elipse.png" />
+                    <img class="elipses elipse4" src="/images/elipse.png" />
                     <img class="pictureOfMario" src="/images/mariocharo.png" />
                 </section>
                 <div class="menu">
@@ -17,10 +17,6 @@
                         <li>
                             <p class="orders">COMMANDES</p>
                             <img class="star2" src="/images/ministar.gif" />
-                        </li>
-                        <li>
-                            <p class="exit">QUITTER</p>
-                            <img class="star3" src="/images/ministar2.gif" />
                         </li>
                     </ul>
                 </div>
