--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -11,7 +11,7 @@
                 <div class="menu">
                     <ul>
                         <li>
-                            <p class="play">JOUER</p>
+                            <p class="play">JOUERR</p>
                             <img class="star1" src="/images/ministar.gif" />
                         </li>
                         <li>
