--- a/src/screens/header.html
+++ b/src/screens/header.html
@@ -1,39 +1,14 @@
 <section class="head">
-    <div class="flexItem chrono">
-        1:00
-    </div>
-    <div class="flexItem rooms">
-        <div class="room roomBedroom">CHAMBRE</div>
-        <div class="room roomBathroom">SALLE<br>DE<br>BAIN</div>
-        <div class="room roomLivingRoom">SALON</div>
-        <div class="room roomCorridor">COULOIR</div>
-    </div>
-    <article class="flexItem score">
-        <img class="mush" src="/images/mushroom.png" />
-        <p class="text scoreNumber">18</p>
-    </article>
+  <div class="flexItem chrono">
+    1:00
+  </div>
+  <article class="flexItem rooms">
+    <div class="room roomBedroom">CHAMBRE</div>
+    <div class="room roomBathroom">SALLE<br />DE<br />BAIN</div>
+    <div class="room roomLivingRoom">SALON</div>
+    <div class="room roomCorridor">COULOIR</div>
+  </article>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- <img src="/image-backgroung/ico_bedroom.png" />
 <img src="/image-backgroung/ico_bathroom.png" />
