--- a/src/screens/tutocommande.html
+++ b/src/screens/tutocommande.html
@@ -1,17 +1,21 @@
-    <section class="contentTuto">
-        <section class="text">
-            <h1 class="but">BUT DU JEU</h1>
-            <br />
-            <br />
-            <article class="explication">
-                mamma mia ! peach voit rouge !
-                ramasse le plus de champignons possibles dans un temps imparti
-                sans te faire attraper par peach
-
-            </article>
-
-            <section class="tutoImg">
-                <img src="/images/tuto-images.png" class="imgTuto">
-            </section>
-        </section>
-    </section>
+<section class="contentTuto">
+  <section class="text">
+    <h1 class="but">BUT DU JEU</h1>
+    <br />
+    <br />
+    <article class="explication">
+      mamma mia ! peach voit rouge ! Déplace toi en cliquant sur les pièces pour
+      lui échapper
+      <br />
+      Attention a ne pas te faire surprendre !
+    </article>
+    <article class="tutoImg">
+      <div>
+        <img class="imgTuto" src="../images/commande-tuto.png" />
+      </div>
+      <div>
+        <img class="arrow" src="../images/fleche-removebg-preview.png" />
+      </div>
+    </article>
+  </section>
+</section>
