--- a/src/screens/scenario3.html
+++ b/src/screens/scenario3.html
@@ -3,7 +3,7 @@
     Vite saute sur Daisy en lui cliquant dessus pour la faire disparaître !
   </div>
   <div class="daisyHere">
-    <img class="sleepingDaisy" src="/images/sleepingdaisy.png" />
+    <img class="sleepingDaisy" src="../images/sleepingdaisy.png" />
   </div>
   <div>
     <img class="arrow3" src="../images/fleche-removebg-preview.png" />
