--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,25 +1,29 @@
-    <section class="main">
-        <div class="backgroundOpacity">
-            <div class="container">
-                <section class="titleOfTheGame">
-                    <img class="elipses elipse1" src="/images/elipse.png" />
-                    <img class="elipses elipse2" src="/images/elipse.png" />
-                    <img class="elipses elipse3" src="/images/elipse.png" />
-                    <img class="elipses elipse4" src="/images/elipse.png" />
-                    <img class="pictureOfMario" src="/images/mariocharo.png" />
-                </section>
-                <div class="menu">
-                    <ul>
-                        <li>
-                            <p class="play">JOUERR</p>
-                            <img class="star1" src="/images/ministar.gif" />
-                        </li>
-                        <li>
-                            <p class="orders">COMMANDES</p>
-                            <img class="star2" src="/images/ministar.gif" />
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
+<section class="main">
+  <div class="backgroundOpacity">
+    <div class="container">
+      <section class="titleOfTheGame">
+        <img class="elipses elipse1" src="/images/elipse.png" />
+        <img class="elipses elipse2" src="/images/elipse.png" />
+        <img class="elipses elipse3" src="/images/elipse.png" />
+        <img class="elipses elipse4" src="/images/elipse.png" />
+        <img class="pictureOfMario" src="/images/mariocharo.png" />
+      </section>
+      <div class="menu">
+        <ul>
+          <li>
+            <p class="play">JOUER</p>
+            <img class="star1" src="/images/ministar.gif" />
+          </li>
+          <li>
+            <p class="orders">COMMANDES</p>
+            <img class="star2" src="/images/ministar.gif" />
+          </li>
+          <li>
+            <p class="orders">QUITTER</p>
+            <img class="star2" src="/images/ministar.gif" />
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
