--- a/src/screens/video.html
+++ b/src/screens/video.html
@@ -1,5 +1,5 @@
 <div class="game0">
-  <video autoplay preload controls>
+  <video autoplay preload>
     <source src="../videos/Frame 1_1 (1).mp4" type="video/mp4" />
   </video>
 </div>
