--- a/src/screens/video.html
+++ b/src/screens/video.html
@@ -1,5 +1,10 @@
-<div class="game0">
-  <video autoplay preload>
-    <source src="../videos/Frame 1_1 (1).mp4" type="video/mp4" />
-  </video>
-</div>
+<section>
+  <div class="game0">
+    <video autoplay preload>
+      <source src="../videos/Frame 1_1 (1).mp4" type="video/mp4" />
+    </video>
+    <div>
+      <img class="arrowV" src="../images/fleche-removebg-preview.png" />
+    </div>
+  </div>
+</section>
