--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -3,10 +3,10 @@
     <!-- //1:00  -->
   </div>
   <article class="flexItem rooms">
-    <div class="element piece1" data-piece="1">CHAMBRE</div>
-    <div class="element piece2" data-piece="2">SALLE<br />DE<br />BAIN</div>
-    <div class="element piece3" data-piece="3">SALON</div>
-    <div class="element piece4" data-piece="4">COULOIR</div>
+    <div class="element piece1" data-piece="1">CHAMBRE<span><img src="/images/peach.png"></span></div>
+    <div class="element piece2" data-piece="2">SALLEDEBAIN<span><img src="/images/peach.png"><span></span></spa></span></div>
+    <div class="element piece3" data-piece="3">SALON<span><img src="/images/peach.png"></span></div>
+    <div class="element piece4" data-piece="4">COULOIR<span><img src="/images/peach.png"></span></div>
   </article>
   <article class="maison">
     <div class="pieces piece1" data-piece="1">
