--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -23,3 +23,4 @@
     </div>
   </article>
 </section>
+<audio src="/audios/musics/airship.m4a" autoplay="true" autostart="True" type="audio/mp3" />
