--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -11,7 +11,8 @@
       <div class="menu">
         <ul>
           <li>
-            <p class="play">JOUER</p>
+
+            <p class="play" id="plaay">JOUER<audio id="cry" src="/audios/sounds/Crying_Peach.m4a"></audio></p>
             <img class="star1" src="/images/ministar.gif" />
           </li>
           <li>
@@ -27,3 +28,5 @@
     </div>
   </div>
 </section>
+<audio src="/audios/musics/peach-castle.m4a" autoplay="true" autostart="True" type="audio/mp3" />
+<!-- <audio src="/audios/sounds/Crying_Peach.m4a" class="cry" id="cry" autoplay="true" autostart="True" type="audio/mp3" /> -->
