update and debug scss

--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,13 +1,14 @@
-<section class="head">
-  <div class="flexItem chrono">
-    <!-- //1:00  -->
-  </div>
-  <article class="flexItem rooms">
-    <div class="element piece1" data-piece="1">CHAMBRE</div>
-    <div class="element piece2" data-piece="2">SALLE<br />DE<br />BAIN</div>
-    <div class="element piece3" data-piece="3">SALON</div>
-    <div class="element piece4" data-piece="4">COULOIR</div>
-  </article>
+<div class="game">
+    <div class="flexItem chrono">
+      <!-- //1:00  -->
+    </div>
+    <article class="flexItem rooms">
+      <div class="element piece1" data-piece="1">CHAMBRE</div>
+      <div class="element piece2" data-piece="2">SALLE<br />DE<br />BAIN</div>
+      <div class="element piece3" data-piece="3">SALON</div>
+      <div class="element piece4" data-piece="4">COULOIR</div>
+    </article>
+  </section>
   <article class="maison">
     <div class="pieces piece1" data-piece="1">
       <img src="/images/bedroom.png" />
@@ -22,4 +23,4 @@
       <img src="/images/hallway.png" />
     </div>
   </article>
-</section>
+</div>
