--- a/src/screens/scenario1.html
+++ b/src/screens/scenario1.html
@@ -1,11 +1,16 @@
 <section class="scenario1">
-  <div class="daisyText">
-    <p>
-      Qu'est ce- ? Daisy ? Pourquoi je suis dans son lit.... OH LA BOULETTE !
-      Mamamia... Peach va me -
-    </p>
-  </div>
-  <div>
-    <img class="arrow1" src="../images/fleche-removebg-preview.png" />
+  <div class="scenario1__text-container">
+    <div class="daisyText">
+      <p>
+        Qu'est ce- ? Daisy ? Pourquoi je suis dans son lit.... OH LA BOULETTE !
+        Mamamia... Peach va me -
+      </p>
+    </div>
+    <div class="scenario1__next">
+      <p>Suite</p>
+    </div>
+    <div>
+      <img class="arrow1" src="../images/fleche-removebg-preview.png" />
+    </div>
   </div>
 </section>
