--- a/src/screens/scenario3.html
+++ b/src/screens/scenario3.html
@@ -1,6 +1,10 @@
 <section class="scenario3">
-  <div class="disapearText">
-    Vite saute sur Daisy en lui cliquant dessus pour la faire disparaître !
+  <div class="scenario3__text-container">
+    <div class="disapearText">
+      <p>
+        Vite saute sur Daisy en lui cliquant dessus pour la faire disparaître !
+      </p>
+    </div>
   </div>
   <div class="daisyHere">
     <img class="sleepingDaisy" src="../images/sleepingdaisy.png" />
