--- a/src/screens/tutocommande.html
+++ b/src/screens/tutocommande.html
@@ -4,14 +4,14 @@
     <br />
     <br />
     <article class="explication">
-      mamma mia ! peach voit rouge ! Déplace toi en cliquant sur les pièces pour
-      lui échapper
+      mamma mia ! peach voit rouge ! Deplace toi en cliquant sur les pieces pour
+      lui echapper
       <br />
       Attention a ne pas te faire surprendre !
     </article>
     <article class="tutoImg">
       <div>
-        <img class="imgTuto" src="../images/commande-tuto.png" />
+        <img class="imgTuto" src="../images/tuto_commandes.png" />
       </div>
       <div>
         <img class="arrow" src="../images/fleche-removebg-preview.png" />
