--- a/src/screens/scenario2.html
+++ b/src/screens/scenario2.html
@@ -1,10 +1,15 @@
 <section class="scenario2">
-  <div class="daisyText2">
-    <p>
-      Peach depuis le RC : “MARIO JE SAIS QUE TU ES LA SI JE T’ATTRAPES- !!! “
-    </p>
-  </div>
-  <div>
-    <img class="arrow2" src="../images/fleche-removebg-preview.png" />
+  <div class="scenario2__text-container">
+    <div class="daisyText2">
+      <p>
+        Peach depuis le RC : “MARIO JE SAIS QUE TU ES LA SI JE T’ATTRAPES- !!! “
+      </p>
+    </div>
+    <div class="scenario2__next">
+      <p>Suite</p>
+    </div>
+    <div>
+      <img class="arrow2" src="../images/fleche-removebg-preview.png" />
+    </div>
   </div>
 </section>
