scenraio: modified, sounds&musics: added modified..

--- a/src/screens/scenario2.html
+++ b/src/screens/scenario2.html
@@ -1,7 +1,7 @@
 <section class="scenario2">
   <div class="daisyText2">
     <p>
-      Peach depuis le RC : “MARIO JE SAIS QUE TU ES LA SI JE T’ATTRAPES- !!! “
+      *Peach depuis le rez-de-chaussée* MARIO JE SAIS QUE TU ES LA SI JE T’ATTRAPES- !!!
     </p>
   </div>
   <div>
