--- a/src/screens/tutocommande.html
+++ b/src/screens/tutocommande.html
@@ -4,7 +4,7 @@
     <br />
     <br />
     <article class="explication">
-      mamma mia ! peach voit rouge ! Déplace toi en cliquant sur les pièces pour
+      mamma mia ! peach voit rouge ! deplace toi en cliquant sur les pièces pour
       lui échapper
       <br />
       Attention a ne pas te faire surprendre !
