--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -4,7 +4,8 @@
   </div>
   <article class="flexItem rooms">
     <div class="element piece1" data-piece="1">CHAMBRE<span><img src="/images/peach.png"></span></div>
-    <div class="element piece2" data-piece="2">SALLEDEBAIN<span><img src="/images/peach.png"><span></span></spa></span></div>
+    <div class="element piece2" data-piece="2">SALLEDEBAIN<span><img src="/images/peach.png"><span></span></spa></span>
+    </div>
     <div class="element piece3" data-piece="3">SALON<span><img src="/images/peach.png"></span></div>
     <div class="element piece4" data-piece="4">COULOIR<span><img src="/images/peach.png"></span></div>
   </article>
@@ -23,4 +24,4 @@
     </div>
   </article>
 </section>
-<audio src="/audios/musics/airship.m4a" autoplay="true" autostart="True" type="audio/mp3" />
+<audio src="/audios/musics/airship.mp3" autoplay="true" autostart="True" type="audio/mp3" />
