--- a/src/screens/scenario1.html
+++ b/src/screens/scenario1.html
@@ -1,11 +1,13 @@
 <section class="scenario1">
   <div class="daisyText">
     <p>
-      Qu'est ce- ? Daisy ? Pourquoi je suis dans son lit.... OH LA BOULETTE !
-      Mamamia... Peach va me -
+      *Mario se réveil*
+      Qu'est ce- ? Daisy ? <strong>Pourquoi je suis dans son lit...</strong>
+      MAMMA MIA... Peach va me-
     </p>
   </div>
   <div>
     <img class="arrow1" src="../images/fleche-removebg-preview.png" />
   </div>
 </section>
+<audio src="/audios/sounds/mamma.m4a" autoplay="true" autostart="True" type="audio/mp3" />
