update and debug js

--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,13 +1,24 @@
-
 <section class="head">
   <div class="flexItem chrono">
     <!-- //1:00  -->
   </div>
   <article class="flexItem rooms">
-    <div class="element piece1" data-piece="1">CHAMBRE<span><img src="/images/peach.png"></span></div>
-    <div class="element piece2" data-piece="2">SALLEDEBAIN<span><img src="/images/peach.png"><span></span></spa></span></div>
-    <div class="element piece3" data-piece="3">SALON<span><img src="/images/peach.png"></span></div>
-    <div class="element piece4" data-piece="4">COULOIR<span><img src="/images/peach.png"></span></div>
+    <div class="element piece1" data-piece="1">
+      CHAMBRE
+      <span class="piece1span"></span>
+    </div>
+    <div class="element piece2" data-piece="2">
+      SALLE DE BAIN
+      <span class="piece2span"></span>
+    </div>
+    <div class="element piece3" data-piece="3">
+      SALON
+      <span class="piece3span"></span>
+    </div>
+    <div class="element piece4" data-piece="4">
+      COULOIR
+      <span class="piece4span"></span>
+    </div>
   </article>
   <article class="maison">
     <div class="pieces piece1" data-piece="1">
@@ -23,7 +34,4 @@
       <img src="/images/hallway.png" />
     </div>
   </article>
-
 </section>
-<audio src="/audios/musics/airship.m4a" autoplay="true" autostart="True" type="audio/mp3" />
-
