--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -35,3 +35,13 @@
     </div>
   </article>
 </section>
+<div>
+  <audio
+    src="../audios/musics/jeu.mp3"
+    class="cry"
+    id="cry"
+    autoplay="true"
+    autostart="True"
+    type="audio/mp3"
+  ></audio>
+</div>
