--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -11,8 +11,12 @@
       <div class="menu">
         <ul>
           <li>
-
-            <p class="play" id="plaay">JOUER<audio id="cry" src="/audios/sounds/Crying_Peach.m4a"></audio></p>
+            <p class="play" id="plaay">
+              JOUER<audio
+                id="cry"
+                src="/audios/sounds/Crying_Peach.m4a"
+              ></audio>
+            </p>
             <img class="star1" src="/images/ministar.gif" />
           </li>
           <li>
@@ -28,5 +32,14 @@
     </div>
   </div>
 </section>
-<audio src="/audios/musics/peach-castle.m4a" autoplay="true" autostart="True" type="audio/mp3" />
+<div>
+  <audio
+    src="../audios/musics/peach-castle.m4a"
+    class="cry"
+    id="cry"
+    autoplay="true"
+    autostart="True"
+    type="audio/mp3"
+  ></audio>
+</div>
 <!-- <audio src="/audios/sounds/Crying_Peach.m4a" class="cry" id="cry" autoplay="true" autostart="True" type="audio/mp3" /> -->
