--- a/src/screens/scenario1.html
+++ b/src/screens/scenario1.html
@@ -14,3 +14,13 @@
     </div>
   </div>
 </section>
+<div>
+  <audio
+    src="../audios/musics/mamamia.m4a"
+    class="cry"
+    id="cry"
+    autoplay="true"
+    autostart="True"
+    type="audio/mp3"
+  ></audio>
+</div>
