--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -34,9 +34,7 @@
 </section>
 <div>
   <audio
-    src="../audios/musics/peach-castle.m4a"
-    class="cry"
-    id="cry"
+    src="/audios/musics/peach-castle.m4a"
     autoplay="true"
     autostart="True"
     type="audio/mp3"
